--- a/layouts/shortcodes/tip.html
+++ b/layouts/shortcodes/tip.html
@@ -1,9 +1,10 @@
 {{ $_hugo_config := `{ "version": 1 }` }}
-<aside class="flex mt2 pt2 pb2 pl2 pr2 w-auto bg-near-white">
-	<div class="pr2">
-		{{partial "svg/tips.svg"  (dict "size" "30px")}}
+
+<aside class="mt2 pv2 ph3 w-auto bg-washed-green br3">
+	<div class="flex f4 pt2 dark-green">
+		<div class="font-segmdl2">&#xE82F</div>&nbsp
+		<div class="fw6"></span>特别提醒</div>
 	</div>
-	<!-- <h2 id="{{if .Get 0}}{{.Get 0 | urlize}}{{else}}tip{{end}}">{{if .Get 0}}{{.Get 0 | markdownify}}{{else}}Tip{{end}}</h2> -->
-	<!-- <h3>Tip</h3> -->
-	<div class="pr2">{{- .Inner | markdownify -}}</div>
+	<p >{{- .Inner | markdownify -}}</p>
 </aside>
+
