--- a/layouts/shortcodes/warning.html
+++ b/layouts/shortcodes/warning.html
@@ -1,9 +1,8 @@
 {{ $_hugo_config := `{ "version": 1 }` }}
-<aside class="flex mt2 pt2 pb2 pl2 pr2 w-auto bg-washed-red">
-	<div class="pr2">		
-		{{ partial "svg/warning2.svg" (dict "size" "30px") }}
+<aside class="mt2 pv2 ph3 w-auto bg-washed-red br3">
+	<div class="flex f4 pt2 dark-red">
+		<div class="font-segmdl2">&#xE7BA</div>&nbsp
+		<div class="fw6"></span>警告</div>
 	</div>
-	 <!-- <h2 id="{{if .Get 0}}{{.Get 0 | urlize}}{{else}}warning{{end}}">{{if .Get 0}}{{.Get 0 | markdownify}}{{else}}Warning{{end}}</h2> 
-	 <h3>Warning</h3>  -->
-	<div class="pr2">{{- .Inner | markdownify -}}</div>
+	<p >{{- .Inner | markdownify -}}</p>
 </aside>
