--- a/static/css/common.css
+++ b/static/css/common.css
@@ -4,6 +4,10 @@
     src: url('../fonts/segmdl2.woff');
 }
 
+.font-segmdl2 {
+    font-family: "segmdl2";
+}
+
 ul, ol {
     /* margin-top: 0.1rem; */
     margin-left: -1.5rem;
