--- a/layouts/shortcodes/note.html
+++ b/layouts/shortcodes/note.html
@@ -2,7 +2,7 @@
 
 <aside class="mt2 pv2 ph3 w-auto bg-lightest-blue br3">
 	<div class="flex f4 pt2 dark-blue">
-		<div class="font-segmdl2">&#xE946</div>&nbsp
+		<div class="font-segmdl2">&#xEDFB</div>&nbsp
 		<div class="fw6"></span>注意</div>
 	</div>
 	<p >{{- .Inner | markdownify -}}</p>
