--- a/layouts/shortcodes/warning.html
+++ b/layouts/shortcodes/warning.html
@@ -1,7 +1,7 @@
 {{ $_hugo_config := `{ "version": 1 }` }}
 <aside class="mt2 pv2 ph3 w-auto bg-washed-red br3">
 	<div class="flex f4 pt2 dark-red">
-		<div class="font-segmdl2">&#xE7BA</div>&nbsp
+		<div class="font-segmdl2">&#xE945</div>&nbsp
 		<div class="fw6"></span>警告</div>
 	</div>
 	<p >{{- .Inner | markdownify -}}</p>
