--- a/assets/output/css/app.css
+++ b/assets/output/css/app.css
@@ -4953,11 +4953,19 @@ small, .font_small {font-size: 0.8em;}
     border-collapse: collapse;
     border-spacing: 0;
     font-size: 1em;
-    border: 1px solid rgb(1, 102, 102)
 }
+
 .prose table th {
-  background-color: rgb(240, 240, 240);
-  border: 1px solid rgb(190, 190, 190);
+  background-color: rgb(230, 230, 230);
+  border-top-style: solid;
+  border-bottom-style: solid;
+  border-top-width: 2px;
+  border-bottom-width: 2px;
+  border-right-style: none;
+  border-left-style: none;
+  border-top-color: rgb(230, 230, 230);
+  border-bottom-color: rgb(230, 230, 230);
+  background-color: transparent;
   color: rgb(61, 61, 61);
   font-weight: 600;
   text-align: left;
@@ -4966,7 +4974,15 @@ small, .font_small {font-size: 0.8em;}
 .prose table td, .prose table tc {
   padding: .25em .5em;
   text-align: left;
-  border: 1px solid rgb(190, 190, 190);
+  border-top-style: solid;
+  border-bottom-style: solid;
+  border-top-width: 1px;
+  border-bottom-width: 1px;
+  border-right-style: none;
+  border-left-style: none;
+  border-top-color: rgb(230, 230, 230);
+  border-bottom-color: rgb(230, 230, 230);
+  background-color: transparent;
 }
 .prose table tr:nth-child(even) {
   background-color: rgb(255, 255, 255);
