--- a/layouts/partials/nav-links-docs-mobile.html
+++ b/layouts/partials/nav-links-docs-mobile.html
@@ -5,17 +5,14 @@
   {{ range $menu }}
   {{if eq .Name "文档中心"  }}
     <li  class="tl dib hover-bg-black w-100 pv1 bb b--moon-gray">
-        <div class="flex">
-          <a href="{{.URL}}" class="f6 link overflow hover-black db brand-font w-100 pv1 pl2 {{if $currentPage.IsMenuCurrent "main" . }} bg-primary-color{{end}}">
-            {{ .Name }}
-          </a>
-          <button id="mobile-submenu-button-docs-page" onclick="mobileSubMenuButtonDocsPageOnclick()" aria-expanded="false" 
-            class="querybtn v-mid link dib dn-l f6 tr db ph3 bg-transparent bn"></button> 
+        <div class="flex justify-between f5 pv1 ph1" 
+          id="mobile-submenu-button-docs-page" onclick="mobileSubMenuButtonDocsPageOnclick()" aria-expanded="false" >
+          文档目录
         </div>
         <ul id="mobile-submenu-docs-page" aria-expanded="false" class="list dib scrolling-touch tc pl4">
           {{ range $menuDocs }}{{ $post := printf "%s" .Post }}
             <li  class="tl dib  hover-bg-black w-100">
-                <a href="{{.URL}}" class="f7 link hover-black db brand-font mt1 w-100 pv0 pl3{{if $currentPage.IsMenuCurrent "main" . }} bg-primary-color{{end}}">
+                <a href="{{.URL}}" class="f6 link hover-black db brand-font mt1 w-100 pv0 pl3{{if $currentPage.IsMenuCurrent "main" . }} bg-primary-color{{end}}">
                   {{ .Name }}
                 </a>
                 {{- if .HasChildren }}
@@ -27,7 +24,7 @@
                     {{ else if eq .URL "/help/node9/" }}
                     {{ else }}
                       <li class="tl dib hover-bg-black w-100 pl3">
-                        <a href="{{ .URL }}" class="f7 link hover-black db brand-font mb0 w-100 pv0 {{if $currentPage.IsMenuCurrent "main" . }} bg-primary-color{{end}}">
+                        <a href="{{ .URL }}" class="f6 link hover-black db brand-font mb0 w-100 pv0 {{if $currentPage.IsMenuCurrent "main" . }} bg-primary-color{{end}}">
                           {{ .Name }}
                         </a>
                       </li>
