--- a/layouts/partials/nav-mobile.html
+++ b/layouts/partials/nav-mobile.html
@@ -1,10 +1,11 @@
 
 <div class="dn-l flex justify-between bg-primary-color-dark w-100 h-auto pv1">
   <button id="mobile-menu-button" onclick="mobileMenuButtonOnclick()" aria-expanded="false" aria-hidden="false" 
-    class="querybtn dib dn-l f3 tc db pl3 pt1 white bg-transparent bn"></button>
-  <div id="mobile-menu-logo" aria-hidden="false" class="link dib db dn-l tc v-mid w-80">
+    class="querybtn dib dn-l f3 tc db pl3 pt1 white bg-transparent bn">
+  </button>
+  <a id="mobile-menu-logo" href="{{.Site.BaseURL}}" aria-hidden="false" class="link dib db dn-l tc v-mid w-80">
         {{ partial "svg/senboll-logo.svg" (dict "size" "36px" "class" "v-mid") }}
-  </div>
+  </a>
 <!-- 
   <div id="mobile-search-input" aria-hidden="true" class="db dib-ns pl3 w-90 pv2">
     {{if not .Site.Params.isDisableSearch}}
