--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -3,7 +3,7 @@
 <div class="order-3 bg-white black db dn-l w-100 ">
     {{- partial "nav-links-docs-mobile.html" . -}}
 </div>
-  <article class="w-100 ph4 pb5 pb6-ns pt1 pt5-ns">
+  <article class="w-100 ph4 pb5 pb6-ns pt1 pt4-ns">
 
     <div class="flex-l">
 
@@ -11,11 +11,11 @@
         {{- partial "toc.html" . -}}
       </div>
 
-      <div class="order-0 w-20 dn db-l">
+      <div class="order-0 w-20-l fixed-l dn db-l">
         {{ partial "nav-links-docs.html" . }}
       </div>
       
-      <div class="order-1 w-100 w-60-l ph0 ph5-ns mid-gray nested-copy-line-height no-underline nested-links nested-img nested-copy-seperator nested-blockquote mt0-ns">
+      <div class="order-1 center w-100 w-60-l ph0 ph5-ns mid-gray nested-copy-line-height no-underline nested-links nested-img nested-copy-seperator nested-blockquote mt0-ns">
         <div class="documentation-copy center w-100">
           <div id="readout" class="fixed right-0 bottom-0">
           </div>
