--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -7,7 +7,7 @@
 
     <div class="flex-l">
 
-      <div class="order-2 w-100 w-20-l ph5-m ph0-l mb4 fixed-l right-0-l">
+      <div class="order-2 w-100 w-20-l ph5-m ph0-l mb4 fixed-l right-0-l dn db-l">
         {{- partial "toc.html" . -}}
       </div>
 
