--- a/layouts/_default/page.html
+++ b/layouts/_default/page.html
@@ -27,7 +27,7 @@
   partial "components/author-github-data" (dict "context" . "size" "110") -->
 </aside>
 
-<div class="w-100 ph3-m pv2-m mv4 dn-l bg-light-gray br3 ">
+<div class="w-100 ph3-m ph3-l pv2-m pv2-l mv4 dn-l bg-light-gray br3 ">
   {{- partial "toc.html" . -}}
 </div>
 
