--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -3,7 +3,7 @@
 <div class="order-3 bg-white black db dn-l w-100 ">
     {{- partial "nav-links-docs-mobile.html" . -}}
 </div>
-  <article class="w-100 ph4 pb5 pb6-ns pt1 pt4-ns">
+  <article class="w-90-l center ph4 pb5 pb6-ns pt1 pt4-ns">
 
     <div class="flex-l">
 
