--- a/layouts/partials/home-page-sections/features-single-custom.html
+++ b/layouts/partials/home-page-sections/features-single-custom.html
@@ -7,21 +7,21 @@
 
         <div class="w-100 w-50-l {{ if modBool $i 2 }}order-1{{ else }}order-0{{ end }}">
           <div class="w-100-ns center">
-            <img src="{{ .image }}" alt="image depicting an example of {{ .heading }}" class="img shadow-5">
+            <img src="{{ .image }}" alt="image depicting an example of {{ .heading }}" class="img shadow-0">
           </div>
         </div>
 
-        <div class="w-100 w-50-l">
+        <div class="w-100 w-50-l flex items-center justify-center">
           <div class="w-80-ns center tc">
-            <p class="f3 f1-l fw4 black ma0 pt4 lh-title pt0-l tc">{{ .heading }}</p>
+            <p class="f3 f2-l fw4 ma0 pt4 lh-title pt0-l tc">{{ .heading }}</p>
             <p class="f5 f4-l lh-copy tc">
               {{ .copy }}
             </p>
-              <p class="f4 f4-l lh-copy nested-linksTK">
-                 <a href="{{ .link | absURL }}" class="link black dim">
-                  <!--{{ .cta }} {{ partial "svg/link-ext.svg" (dict "fill" "#333" "size" "14") }} -->
-                </a>
-              </p>
+            <p class="f4 f4-l lh-copy nested-linksTK">
+                <a href="{{ .link | absURL }}" class="link black dim">
+                <!--{{ .cta }} {{ partial "svg/link-ext.svg" (dict "fill" "#333" "size" "14") }} -->
+              </a>
+            </p>
           </div>
         </div>
 
