--- a/layouts/partials/custom-footer.html
+++ b/layouts/partials/custom-footer.html
@@ -7,8 +7,8 @@
   <a class="dim link blue pv2 nowrap" href="http://support.senboll.com:8888/usage">案例相册</a> | 
   <a class="dim link blue pv2 nowrap" href="http://support.senboll.com:8888/swan">APP缴费</a>
   <br/>
-  全国服务热线：400-002-5577 | 
-  <a class="dim link blue pv2 nowrap" href="http://support.senboll.com:8888/help/contact.html">网站支持：James Zhang</a>
+  全国服务热线：400-002-5577
+  <!-- <a class="dim link blue pv2 nowrap" href="http://support.senboll.com:8888/help/contact.html">网站支持：James Zhang</a> -->
   <br/>
   ©<span id="year"></span>年著作权，盛波尔科技所有权。
 </p>
