--- a/layouts/partials/site-nav.html
+++ b/layouts/partials/site-nav.html
@@ -8,7 +8,7 @@
     <a href="{{.Site.BaseURL}}" class="flex items-center justify-center pv0 f4 tc w-20">
       {{ partial "svg/senboll-logo.svg" (dict "size" "48px" ) }}
     </a>
-    <ul class="list flex items-center justify-between w-60">
+    <ul class="list flex items-center justify-between w-60-l">
       {{ range .Site.Menus.global }}
         <li class="f5 dib tc" role="menuitem">
             {{/* TODO: Create an "Global" active class to show which site one is currently at */}}
