--- a/layouts/partials/home-page-sections/about.html
+++ b/layouts/partials/home-page-sections/about.html
@@ -5,11 +5,11 @@
     <section class="w-100mid-gray {{ .color_classes }}">
       <div class="w-100 center">
 
-        <div class="w-100 ph4 ph5-ns pt4 pt2-l ">
+        <div class="w-100 ph4 ph5-ns pt0 pt0-l ">
           <div class="w-80-l center tl">
-            <p class="f3 f2-l fw4 ma0 pt4 lh-title pt0-l ">{{ .heading }}</p>
+            <p class="f3 f2-l fw4 ma0 pt0 lh-title pt0-l ">{{ .heading }}</p>
             <p class="f5 f4-l lh-copy ">
-              {{ .copy1 }}
+              {{ .copy }}
             </p>
             <p class="f5 f4-l lh-copy ">
               {{ .copy1 }}
@@ -21,7 +21,7 @@
               </p> -->
           </div>
         </div>
-
+<!-- 
         <div class="w-100 ph4 ph5-ns">
           <div class="w-80-l center">
             <img src="../images/about.jpeg" alt="image depicting an example of {{ .heading }}" class="img shadow-0 w-100">
@@ -29,7 +29,7 @@
           <div class="w-80-l center">
             <img src="../images/about1.jpg" alt="image depicting an example of {{ .heading }}" class="img shadow-0 w-100">
           </div>
-        </div>
+        </div> -->
 
       </div>
     </section>
