--- a/static/css/common.css
+++ b/static/css/common.css
@@ -223,7 +223,7 @@ img{
 
 .about{    
   line-height: 1.875;
-  background-image: url('../images/world-map.svg');
+  background-image: url('../images/world-map1.svg');
   background-repeat: no-repeat; 
   background-size: 100% 100%;
   -moz-background-size: 100% 100%;
