--- a/static/css/common.css
+++ b/static/css/common.css
@@ -228,3 +228,14 @@ img{
   background-size: 100% 100%;
   -moz-background-size: 100% 100%;
 }
+
+
+/* video.js shortcode */
+.video-js {
+    /* margin: 2rem auto; */
+    width: 100%;
+  }
+    
+  .video-js:focus {
+    outline: none;
+  }
