--- a/assets/output/css/app.css
+++ b/assets/output/css/app.css
@@ -2262,6 +2262,7 @@ img { max-width: 100%; }
 .relative  { position: relative; }
 .absolute  { position: absolute; }
 .fixed  { position: fixed; }
+.sticky  { position: sticky; }
 @media screen and (min-width: 30em) {
   .static-ns { position: static; }
   .relative-ns  { position: relative; }
