--- a/layouts/partials/site-nav.html
+++ b/layouts/partials/site-nav.html
@@ -2,7 +2,7 @@
 
 
 
-<nav class="flex items-center justify-center w-100 bg-primary-color-dark bb b--dark-gray " role="navigation">
+<nav class="flex items-center justify-center w-100 bg-primary-color-dark bb b--dark-gray sticky pt0" role="navigation">
 
   <div class="flex items-center justify-center dn-lx dib-l w-80">
     <a href="{{.Site.BaseURL}}" class="flex items-center justify-center pv0 f4 tc w-20">
