--- a/assets/output/css/app.css
+++ b/assets/output/css/app.css
@@ -2262,7 +2262,7 @@ img { max-width: 100%; }
 .relative  { position: relative; }
 .absolute  { position: absolute; }
 .fixed  { position: fixed; }
-.sticky-top  { position: sticky; top: 0px;}
+
 @media screen and (min-width: 30em) {
   .static-ns { position: static; }
   .relative-ns  { position: relative; }
@@ -2274,12 +2274,14 @@ img { max-width: 100%; }
   .relative-m  { position: relative; }
   .absolute-m  { position: absolute; }
   .fixed-m  { position: fixed; }
+  .sticky-top  { top: 45px; bottom: 0px; overflow: auto; }
 }
 @media screen and (min-width: 60em) {
   .static-l { position: static; }
   .relative-l  { position: relative; }
   .absolute-l  { position: absolute; }
   .fixed-l  { position: fixed; }
+  .sticky-top  { top: 58px; bottom: 0px; overflow: auto; }
 }
 /*
 
