--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -48,13 +48,13 @@
   <body class="min-vh-100 flex flex-column ma0 sans-serif {{ with getenv "HUGO_ENV" }} {{ . }}{{ end }}">
     {{ block "nav" . }}{{ partial "site-nav.html" . }}{{ end }}
     {{ block "header" . }}{{ end }}
-    <main role="main" class="content-with-sidebar pb0-ns db w-100 flex-auto bg-white">
+    <main role="main" class="absolute content-with-sidebar pb0-ns db w-100 flex-auto bg-white sticky-top">
       {{ block "main" . }}{{ end }}
-    </main>
 
-    {{ block "footer" . }}
-      {{ partialCached "site-footer.html" . }}
-    {{ end }}
+      {{ block "footer" . }}
+        {{ partialCached "site-footer.html" . }}
+      {{ end }}
+    </main>
     
 
   </body>
