--- a/layouts/partials/custom-footer.html
+++ b/layouts/partials/custom-footer.html
@@ -1,5 +1,5 @@
 
-<p class="light-gray tc">
+<div class="light-gray tc pv2">
   <a class="dim link blue pv2 nowrap" href="http://www.paradox.com">英文官网</a> | 
   <a class="dim link blue pv2 nowrap" href="http://www.senboll.com">中文官网</a> | 
   <a class="dim link blue pv2 nowrap" href="http://support.senboll.com:8888/help">帮助中心</a> | 
@@ -11,7 +11,7 @@
   <!-- <a class="dim link blue pv2 nowrap" href="http://support.senboll.com:8888/help/contact.html">网站支持：James Zhang</a> -->
   <br/>
   ©<span id="year"></span>年著作权，盛波尔科技所有权。
-</p>
+</div>
 
 
 <script>
