--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -3,19 +3,19 @@
 <div class="order-3 bg-white black db dn-l w-100 ">
     {{- partial "nav-links-docs-mobile.html" . -}}
 </div>
-  <article class="w-90-l center ph4 pb5 pb6-ns pt1 pt4-ns">
+  <article class="w-100-l center">
 
     <div class="flex-l">
 
-      <div class="order-2 w-100 w-20-l ph5-m ph0-l mb4 fixed-l right-0-l dn db-l">
+      <div class="pb5 pb6-ns pt4-ns order-2 w-100 w-20-l ph5-m ph3-l mb4 fixed-l right-0-l dn db-l">
         {{- partial "toc.html" . -}}
       </div>
 
-      <div class="order-0 w-20-l fixed-l dn db-l">
+      <div class=" pl4 pr3 pb5 pb6-ns pt1 pt4-ns order-0 w-20-l fixed-l dn db-l">
         {{ partial "nav-links-docs.html" . }}
       </div>
       
-      <div class="order-1 center w-100 w-60-l ph0 ph5-ns mid-gray nested-copy-line-height no-underline nested-links nested-img nested-copy-seperator nested-blockquote mt0-ns">
+      <div class=" ph3 pb5 pb6-ns pt1 pt4-ns order-1 center w-100 w-60-l ph0 ph3-ns mid-gray nested-copy-line-height no-underline nested-links nested-img nested-copy-seperator nested-blockquote mt0-ns">
         <div class="documentation-copy center w-100">
           <div id="readout" class="fixed right-0 bottom-0">
           </div>
