--- a/layouts/partials/toc.html
+++ b/layouts/partials/toc.html
@@ -1,7 +1,7 @@
 <!-- TOCs need to be declared explicitly in the front matter of content/*.md -->
-<aside class="fixed-lTK right-0 f6 bl-l b--moon-gray pv0-ns ph3-l nested-list-reset nested-links nested-copy-line-height verflow-x-scroll overflow-x-hidden overflow-y-auto vh-80">
+<aside class="fixed-lTK right-0 f6 bl-l b--moon-gray pv0-ns ph3-l nested-list-reset nested-links nested-copy-line-height verflow-x-scroll overflow-x-hidden overflow-y-auto">
 	{{ if .Params.toc }}
-		<p class="b f4">目录</p>
+		<p class="b f4 mv0">目录</p>
   		{{ .TableOfContents }}
 	{{ end }}
 	
