--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -45,10 +45,10 @@
           
 
   </head>
-  <body class="min-vh-100 flex flex-column ma0 sans-serif overflow-y-hidden {{ with getenv "HUGO_ENV" }} {{ . }}{{ end }}">
+  <body class="min-vh-100 flex flex-column ma0 sans-serif {{ with getenv "HUGO_ENV" }} {{ . }}{{ end }}">
     {{ block "nav" . }}{{ partial "site-nav.html" . }}{{ end }}
     {{ block "header" . }}{{ end }}
-    <main role="main" style="height: calc(100vh - 58px);" class="content-with-sidebar pb0-ns db w-100 flex-auto bg-white overflow-x-hidden overflow-y-auto">
+    <main role="main" class="content-with-sidebar pb0-ns db w-100 flex-auto bg-white">
       {{ block "main" . }}{{ end }}
 
       {{ block "footer" . }}
