--- a/layouts/_default/page.html
+++ b/layouts/_default/page.html
@@ -14,6 +14,7 @@
     {{- end -}}
   </h1>
 </header>
+{{ partial "docs/page-meta-data.html" . }}
 
 <aside class="bt bw1 pt3 mt2 mid-gray b--mid-gray fn w-100">
   {{ with .Params.description }}
