--- a/layouts/partials/site-scripts.html
+++ b/layouts/partials/site-scripts.html
@@ -5,6 +5,8 @@
   {{ $.Scratch.Set "scripts" . }}    
 {{end}} 
 
+<script type="text/javascript" src="{{ .Site.BaseURL }}/js/jquery.min.js" crossorigin="anonymous" defer=""></script>
+
 <script type="text/javascript" src="{{ .Site.BaseURL }}/js/common.js" crossorigin="anonymous" defer=""></script>
 <script type="text/javascript" src="{{ .Site.BaseURL }}/js/md5.js" crossorigin="anonymous" defer=""></script>
 <script type="text/javascript" src="{{ .Site.BaseURL }}/js/previewImage.js" crossorigin="anonymous" defer=""></script>
