--- a/layouts/partials/toc.html
+++ b/layouts/partials/toc.html
@@ -1,5 +1,20 @@
 <!-- TOCs need to be declared explicitly in the front matter of content/*.md -->
-<aside class="fixed-lTK right-0 f6 bl-l b--moon-gray pv0-ns ph3-l nested-list-reset nested-links nested-copy-line-height vh-80 overflow-x-hidden overflow-y-auto">
+<aside class="fixed-lTK right-0 f6 bl-l b--moon-gray pv0-ns ph3-l nested-list-reset nested-links nested-copy-line-height vh-80 overflow-x-hidden overflow-y-auto dn-lx">
+	{{ if .Params.toc }}
+		<p class="b f4 mv0">目录</p>
+  		{{ .TableOfContents }}
+	{{ end }}
+	
+	{{- partial "previous-next-links-in-section.html" . -}}
+
+	{{- if .Params.godocref -}}
+	<a target="_blank" class="tooltip right godoc-link" data-tooltip="See the related Godocs for {{.Title }}" href="{{.Params.godocref}}" >
+	</a>
+	{{- end -}}
+</aside>
+
+<!-- TOCs need to be declared explicitly in the front matter of content/*.md -->
+<aside class="fixed-lTK right-0 f6 bl-l b--moon-gray pv0-ns ph3-l nested-list-reset nested-links nested-copy-line-height dn-l">
 	{{ if .Params.toc }}
 		<p class="b f4 mv0">目录</p>
   		{{ .TableOfContents }}
