--- a/layouts/page/about.html
+++ b/layouts/page/about.html
@@ -1,7 +1,7 @@
 
 {{ define "main" }}
   <section class="center pb0-l ph0-l black-70 about bg-light-gray">
-    <div class="f5 f4-l w-100-ns w-100 w-100-l center fw2 tl tl-ns justify">
+    <div class="f5 f4-l w-100-ns w-100 w-100-l center fw2 tl tl-ns justify" style="max-width: 1600px;">
       <div >
           {{- partial "home-page-sections/about" . -}}
       </div>
