--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -3,7 +3,7 @@
   <div class="order-3 bg-white black db dn-l w-100 ">
       {{- partial "nav-links-docs-mobile.html" . -}}
   </div>
-  <article class="min-vh-100 w-100-l" style="margin-right: auto; margin-left: auto; max-width: 1600px;">
+  <article class="min-vh-100 w-100-l bg-white" style="margin-right: auto; margin-left: auto; max-width: 1600px;">
 
     <div class="flex-l">
 
