--- a/layouts/partials/pagelayout.html
+++ b/layouts/partials/pagelayout.html
@@ -4,7 +4,7 @@
     {{ partial "nav-links-docs-mobile.html" .context }}
 </div>
 
-<div class="min-vh-100 w-100-l" style="margin-right: auto; margin-left: auto; max-width: 1600px;">
+<div class="min-vh-100 w-100-l bg-white" style="margin-right: auto; margin-left: auto; max-width: 1600px;">
   <div class="flex-l">
     <div class="ph4 pb5 pb6-ns pt1 mt0 pt5-ns order-1 w-100 w-80-l ph0 ph4-l mr0 ml-auto">
       <article class="w-100 nested-copy-line-height nested-links nested-img">
