hide sponsors.html, changed menu link of home and about

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -8,7 +8,7 @@
 
   {{- partial "home-page-sections/features-single-custom" . -}}
 
-  {{ partial "home-page-sections/sponsors.html" (dict "cx" . "gtag" "home" ) }}
+<!--   {{ partial "home-page-sections/sponsors.html" (dict "cx" . "gtag" "home" ) }} -->
 
 <!--   {{- partial "home-page-sections/showcase.html" . -}}  -->
 
