--- a/layouts/partials/home-page-sections/features-single.html
+++ b/layouts/partials/home-page-sections/features-single.html
@@ -20,7 +20,7 @@
         </div>
 
         <div class="w-100 {{ if modBool $i 2 }}order-1{{ else }}order-0{{ end }}">
-          <div class="w-60-l center">
+          <div class="center">
             <img src="{{ .image }}" alt="image depicting an example of {{ .heading }}" class="img shadow-0">
           </div>
         </div>
