--- a/layouts/partials/custom-footer.html
+++ b/layouts/partials/custom-footer.html
@@ -2,7 +2,7 @@
 <div class="light-gray tc pv4">
   <a class="dim link blue pv2 nowrap" href="http://www.paradox.com">英文官网</a> | 
   <a class="dim link blue pv2 nowrap" href="http://www.senboll.com">中文官网</a> | 
-  <a class="dim link blue pv2 nowrap" href="http://support.senboll.com:8888/help">帮助中心</a> | 
+  <a class="dim link blue pv2 nowrap" href="http://support.senboll.com:8888/help/documentation">文档中心</a> | 
   <a class="dim link blue pv2 nowrap" href="http://support.senboll.com:8888">资料服务器</a> | 
   <a class="dim link blue pv2 nowrap" href="http://support.senboll.com:8888/usage">案例相册</a> | 
   <a class="dim link blue pv2 nowrap" href="http://support.senboll.com:8888/swan">APP缴费</a>
