--- a/layouts/partials/site-nav.html
+++ b/layouts/partials/site-nav.html
@@ -5,7 +5,7 @@
 <nav class="flex items-center justify-center w-100 bg-primary-color-dark bb b--dark-gray z-999" role="navigation">
 
   <div class="flex items-center justify-center dn-lx dib-l w-80">
-    <a href="{{.Site.BaseURL}}" class="flex items-center justify-center pv0 f4 tc w-20">
+    <a href="https://www.senboll.com" class="flex items-center justify-center pv0 f4 tc w-20">
       {{ partial "svg/senboll-logo.svg" (dict "size" "48px" ) }}
     </a>
     <ul class="list flex items-center justify-between w-60-l">
