--- a/layouts/partials/nav-mobile.html
+++ b/layouts/partials/nav-mobile.html
@@ -3,7 +3,7 @@
   <button id="mobile-menu-button" onclick="mobileMenuButtonOnclick()" aria-expanded="false" aria-hidden="false" 
     class="querybtn dib dn-l f3 tc db pl3 pt1 white bg-transparent bn">
   </button>
-  <a id="mobile-menu-logo" href="{{.Site.BaseURL}}" aria-hidden="false" class="link dib db dn-l tc v-mid w-80">
+  <a id="mobile-menu-logo" href="https://www.senboll.com" aria-hidden="false" class="link dib db dn-l tc v-mid w-80">
         {{ partial "svg/senboll-logo.svg" (dict "size" "36px" "class" "v-mid") }}
   </a>
 <!-- 
