--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-     {{/* NOTE: the Site's title, and if there is a page title, that is set too */}}
+     {{/* NOTE: the Site is title, and if there is a page title, that is set too */}}
     <title>{{ block "title" . }}{{ with .Title }}{{ . }} | {{ end }}{{ .Site.Title }}{{ end }}</title>
 
     <meta name="viewport" content="width=device-width,minimum-scale=1">
@@ -38,7 +38,7 @@
       <!-- {{- template "_internal/twitter_cards.html" . -}} -->
 
       {{ if eq (getenv "HUGO_ENV") "production" | or (eq .Site.Params.env "production")  }}
-        {{ partial "gtag" . }}
+        <!-- {{ partial "gtag" . }} -->
       {{ end }}
 
 
