--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -38,7 +38,7 @@
       <!-- {{- template "_internal/twitter_cards.html" . -}} -->
 
       {{ if eq (getenv "HUGO_ENV") "production" | or (eq .Site.Params.env "production")  }}
-        <!-- {{ partial "gtag" . }} -->
+        {{ partial "gtag" . }}
       {{ end }}
 
 
