--- a/layouts/partials/custom-footer.html
+++ b/layouts/partials/custom-footer.html
@@ -2,10 +2,10 @@
 <div class="light-gray tc pv4">
   <a class="dim link blue pv2 nowrap" href="http://www.paradox.com">英文官网</a> | 
   <a class="dim link blue pv2 nowrap" href="http://www.senboll.com">中文官网</a> | 
-  <a class="dim link blue pv2 nowrap" href="http://support.senboll.com:8888/help/documentation">文档中心</a> | 
-  <a class="dim link blue pv2 nowrap" href="http://support.senboll.com:8888">资料服务器</a> | 
-  <a class="dim link blue pv2 nowrap" href="http://support.senboll.com:8888/usage">案例相册</a> | 
-  <a class="dim link blue pv2 nowrap" href="http://support.senboll.com:8888/swan">APP缴费</a>
+  <a class="dim link blue pv2 nowrap" href="http://support.senboll.com/help/documentation">文档中心</a> | 
+  <a class="dim link blue pv2 nowrap" href="http://support.senboll.com">资料服务器</a> | 
+  <a class="dim link blue pv2 nowrap" href="http://support.senboll.com/usage">案例相册</a> | 
+  <a class="dim link blue pv2 nowrap" href="http://support.senboll.com/swan">APP缴费</a>
   <br/>
   全国服务热线：400-002-5577
   <!-- <a class="dim link blue pv2 nowrap" href="http://support.senboll.com:8888/help/contact.html">网站支持：James Zhang</a> -->
