--- a/layouts/partials/custom-footer.html
+++ b/layouts/partials/custom-footer.html
@@ -8,7 +8,7 @@
   <a class="dim link blue pv2 nowrap" href="https://support.senboll.com/swan">APP缴费</a>
   <br/>
   全国服务热线：400-002-5577
-  <!-- <a class="dim link blue pv2 nowrap" href="http://support.senboll.com:8888/help/contact.html">网站支持：James Zhang</a> -->
+  <!-- <a class="dim link blue pv2 nowrap" href="https://support.senboll.com/help/contact.html">网站支持：James Zhang</a> -->
   <br/>
   ©<span id="year"></span>年著作权，盛波尔科技所有权。
 </div>
