--- a/layouts/partials/nav-links-docs.html
+++ b/layouts/partials/nav-links-docs.html
@@ -11,6 +11,7 @@
             {{ if eq .URL "/help/node1/" }}
             {{ else if eq .URL "/help/node2/" }}
             {{ else if eq .URL "/help/node3/" }}
+            {{ else if eq .URL "/help/node4/" }}
             {{ else if eq .URL "/help/node9/" }}
             {{ else }}
               <li class="f6 fw4">
