--- a/layouts/partials/nav-links-global-mobile.html
+++ b/layouts/partials/nav-links-global-mobile.html
@@ -26,6 +26,7 @@
                       {{ if eq .URL "/help/node1/" }}
                       {{ else if eq .URL "/help/node2/" }}
                       {{ else if eq .URL "/help/node3/" }}
+                      {{ else if eq .URL "/help/node4/" }}
                       {{ else if eq .URL "/help/node9/" }}
                       {{ else }}
                         <li class="tl dib hover-bg-black w-100 pl3">
