--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -48,7 +48,7 @@
   <body class="min-vh-100 flex flex-column ma0 sans-serif {{ with getenv "HUGO_ENV" }} {{ . }}{{ end }}">
     {{ block "nav" . }}{{ partial "site-nav.html" . }}{{ end }}
     {{ block "header" . }}{{ end }}
-    <main role="main" class="content-with-sidebar pb0-ns db w-100 flex-auto bg-near-white">
+    <main role="main" class="content-with-sidebar pb0-ns db w-100 flex-auto">
       {{ block "main" . }}{{ end }}
 
       {{ block "footer" . }}
