--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -11,7 +11,7 @@
         {{- partial "toc.html" . -}}
       </div>
 
-      <div class="pb5 pb6-ns pt1 pt5-ns order-0 w-20-l dn db-l top-0">
+      <div class="pb5 pb6-ns pt1 pt5-ns order-0 w-20-l dn db-l top-0 bg-near-white">
         {{ partial "nav-links-docs.html" . }}
       </div>
       
