--- a/assets/output/css/app.css
+++ b/assets/output/css/app.css
@@ -4773,10 +4773,12 @@ pre, .pre  {
   overflow:   scroll;
 }
 code {
-    padding: 0.2em;
-    margin: 0;
-    font-size: 85%;
-    background-color: rgba(27, 31, 35, .05);
+    padding: 0.2em;    
+    margin-left: .5em;
+    margin-right: .5em;
+    /* margin: 0; */
+    /* font-size: 85%; */
+    background-color: rgba(27, 31, 35, .1);
     border-radius: 3px;
 }
 pre  code {
