--- a/layouts/partials/pagelayout.html
+++ b/layouts/partials/pagelayout.html
@@ -28,7 +28,7 @@
       </div>
 
     </div>
-    <div class="pb5 pb6-ns pt1 pt5-ns order-0 w-20-l dn db-l top-0 pt5-ns">
+    <div class="pb5 pb6-ns pt1 pt5-ns order-0 w-20-l dn db-l top-0 pt5-ns bg-near-white min-vh-100">
         {{ partial "nav-links-docs.html" .context }}
     </div>
   </div>
