--- a/layouts/shortcodes/video.html
+++ b/layouts/shortcodes/video.html
@@ -35,33 +35,33 @@
 
     - Simple
 
-      {{% video
+      {{< video
         "/media/posts/hugo-nuo-post-preview/videojs.mp4"
         "/media/posts/hugo-nuo-post-preview/videojs.webm"
         "/media/posts/hugo-nuo-post-preview/videojs.ogv"
-      %}}
+      >}}
 
-       {{% video
+       {{< video
         "/media/posts/hugo-nuo-post-preview/videojs.mp4"
         "/media/posts/hugo-nuo-post-preview/videojs.webm"
         "/media/posts/hugo-nuo-post-preview/videojs.ogv"
         "/images/poster.jpg"
-      %}}
+      <}}
 
     - Named Params
 
-      {{%
+      {{<
         video mp4="/media/posts/hugo-nuo-post-preview/videojs.mp4"
         webm="/media/posts/hugo-nuo-post-preview/videojs.webm"
         ogv="/media/posts/hugo-nuo-post-preview/videojs.ogv"
-      %}}
+      <}}
 
-      {{%
+      {{<
         video mp4="/media/posts/hugo-nuo-post-preview/videojs.mp4"
         webm="/media/posts/hugo-nuo-post-preview/videojs.webm"
         ogv="/media/posts/hugo-nuo-post-preview/videojs.ogv"
         poster="/images/poster.jpg"
-      %}}
+      <}}
 
 */}}
 
