--- a/layouts/partials/custom-footer.html
+++ b/layouts/partials/custom-footer.html
@@ -1,14 +1,14 @@
 
 <div class="light-gray tc pv4">
-  <a class="dim link blue pv2 nowrap" href="https://www.paradox.com">英文官网</a> | 
-  <a class="dim link blue pv2 nowrap" href="https://www.senboll.com">中文官网</a> | 
-  <a class="dim link blue pv2 nowrap" href="http://support.senboll.com:8888/help/documentation">文档中心</a> | 
-  <a class="dim link blue pv2 nowrap" href="http://support.senboll.com:8888">资料服务器</a> | 
-  <a class="dim link blue pv2 nowrap" href="http://support.senboll.com:8888/usage">案例相册</a> | 
-  <a class="dim link blue pv2 nowrap" href="http://support.senboll.com:8888/swan">APP缴费</a>
+  <a class="light-silver dim link pv2 nowrap" href="https://www.paradox.com">英文官网</a> | 
+  <a class="light-silver dim link pv2 nowrap" href="https://www.senboll.com">中文官网</a> | 
+  <a class="light-silver dim link pv2 nowrap" href="http://support.senboll.com:8888/help/documentation">文档中心</a> | 
+  <a class="light-silver dim link pv2 nowrap" href="http://support.senboll.com:8888">资料服务器</a> | 
+  <a class="light-silver dim link pv2 nowrap" href="http://support.senboll.com:8888/usage">案例相册</a> | 
+  <a class="light-silver dim link pv2 nowrap" href="http://support.senboll.com:8888/swan">APP缴费</a>
   <br/>
   全国服务热线：400-002-5577
-  <!-- <a class="dim link blue pv2 nowrap" href="http://support.senboll.com:8888/help/contact.html">网站支持：James Zhang</a> -->
+  <!-- <a class="light-silver dim link pv2 nowrap" href="http://support.senboll.com:8888/help/contact.html">网站支持：James Zhang</a> -->
   <br/>
   ©<span id="year"></span>年著作权，盛波尔科技所有权。
 </div>
