--- a/layouts/partials/custom-footer.html
+++ b/layouts/partials/custom-footer.html
@@ -1,18 +1,16 @@
 
-<div class="light-gray tc pv4">
-  <a class="light-silver dim link pv2 nowrap" href="https://www.paradox.com">英文官网</a> | 
-  <a class="light-silver dim link pv2 nowrap" href="https://www.senboll.com">中文官网</a> | 
-  <a class="light-silver dim link pv2 nowrap" href="http://support.senboll.com:8888/help/documentation">文档中心</a> | 
-  <a class="light-silver dim link pv2 nowrap" href="http://support.senboll.com:8888">资料服务器</a> | 
-  <a class="light-silver dim link pv2 nowrap" href="http://support.senboll.com:8888/usage">案例相册</a> | 
-  <a class="light-silver dim link pv2 nowrap" href="http://support.senboll.com:8888/swan">APP缴费</a>
-  <br/>
-  全国服务热线：400-002-5577
-  <!-- <a class="light-silver dim link pv2 nowrap" href="http://support.senboll.com:8888/help/contact.html">网站支持：James Zhang</a> -->
-  <br/>
-  ©<span id="year"></span>年著作权，盛波尔科技所有权。
+<div class="tc pv4">
+  <div class="tc pv2 light-gray">
+    <a class="light-gray  dim link pv2 nowrap" href="https://www.paradox.com">英文官网</a> | 
+    <a class="light-gray dim link pv2 nowrap" href="https://www.senboll.com">中文官网</a> | 
+    <a class="light-gray dim link pv2 nowrap" href="http://support.senboll.com:8888/help/documentation">文档中心</a> | 
+    <a class="light-gray dim link pv2 nowrap" href="http://support.senboll.com:8888">资料服务器</a> | 
+    <a class="light-gray dim link pv2 nowrap" href="http://support.senboll.com:8888/usage">案例相册</a> | 
+    <a class="light-gray dim link pv2 nowrap" href="http://support.senboll.com:8888/swan">APP缴费</a>
+  </div>
+  <div class="light-silver tc pv1">全国服务热线：400-002-5577</div> 
+  <div class="light-silver tc pv1">©<span id="year"></span>年著作权，盛波尔科技所有权。</div>  
 </div>
-
 
 <script>
   function auto_copyright($year) {
@@ -29,13 +27,3 @@
   }
   auto_copyright(1999);
 </script>
-
-<!-- <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-105947713-1', 'auto');
-  ga('send', 'pageview');
-</script> -->
