--- a/layouts/partials/nav-links-docs-mobile.html
+++ b/layouts/partials/nav-links-docs-mobile.html
@@ -3,7 +3,7 @@
 {{ $menuDocs := .Site.Menus.docs.ByWeight }}
 <ul class="list dib scrolling-touch tc mb1 w-100 ph3 mv2 pa0 ma0">
   {{ range $menu }}
-  {{if eq .Name "文档中心"  }}
+  {{if eq .Name "首页"  }}
     <li  class="tl dib hover-bg-black w-100 pv1 bb b--moon-gray">
         <div class="flex justify-between f5 pv1 ph1" 
           id="mobile-submenu-button-docs-page" onclick="mobileSubMenuButtonDocsPageOnclick()" aria-expanded="false" >
