--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -7,11 +7,11 @@
 
     <div class="flex-l">
 
-      <div class="pb5 pb6-ns pt5-ns order-2 w-100 w-20-l ph5-m mb4 right-0-l dn db-l">
+      <div class="pb5 pb6-ns pt5-ns order-2 w-100 w-20-l ph5-m right-0-l dn db-l bg-near-white">
         {{- partial "toc.html" . -}}
       </div>
 
-      <div id="left-container" class="fixed- pb5 pb6-ns pt1 pt5-ns order-0 w-20-l dn db-l top-0 bg-near-white ph2 min-vh-100">
+      <div id="left-container" class="pb5 pb6-ns pt1 pt5-ns order-0 w-20-l dn db-l top-0 bg-near-white ph2 min-vh-100">
         {{ partial "nav-links-docs.html" . }}
       </div>
       
