--- a/layouts/partials/toc.html
+++ b/layouts/partials/toc.html
@@ -1,7 +1,7 @@
 <!-- TOCs need to be declared explicitly in the front matter of content/*.md -->
-<aside id="right-container" style="max-width: 320px;" class="fixed-l fixed-lTK f6 bl-l b--moon-gray ph3-l nested-list-reset nested-links nested-copy-line-height vh-80 overflow-x-hidden overflow-y-auto dn-lx">
+<aside id="right-container" class="fixed-l- fixed-lTK f6 ph3-l nested-list-reset nested-links nested-copy-line-height overflow-x-hidden overflow-y-auto dn-lx">
 	{{ if .Params.toc }}
-		<p class="b f4 mv0">目录</p>
+		<p class="f5 fw6 pv2 bb b--moon-gray mid-gray mb2 w-100-">本文内容</p>
   		{{ .TableOfContents }}
 	{{ end }}
 	
@@ -16,7 +16,7 @@
 <!-- TOCs need to be declared explicitly in the front matter of content/*.md -->
 <aside class="fixed-lTK right-0 f6 bl-l b--moon-gray pv0-ns ph3-l nested-list-reset nested-links nested-copy-line-height dn-l">
 	{{ if .Params.toc }}
-		<p class="b f4 mv0">目录</p>
+		<p class="b f4 mv3">本文内容</p>
   		{{ .TableOfContents }}
 	{{ end }}
 	
