--- a/layouts/partials/nav-links-docs-mobile.html
+++ b/layouts/partials/nav-links-docs-mobile.html
@@ -4,10 +4,10 @@
 <ul class="list dib scrolling-touch tc mb1 w-100 ph3 mv2 pa0 ma0">
   {{ range $menu }}
   {{if eq .Name "首页"  }}
-    <li  class="tl dib hover-bg-black w-100 pv1 bb b--moon-gray">
+    <li  class="tl dib hover-bg-black w-100 pv1 bb b--moon-gray mb2">
         <div class="flex justify-between f5 pv1 ph1" 
           id="mobile-submenu-button-docs-page" onclick="mobileSubMenuButtonDocsPageOnclick()" aria-expanded="false" >
-          <a href="{{.URL}}" class="link" >文档目录</a>
+          <a href="{{.URL}}" class="link" >下拉查看所有文档</a>
         </div>
         <ul id="mobile-submenu-docs-page" aria-expanded="false" class="list dib scrolling-touch tc pl4">
           {{ range $menuDocs }}{{ $post := printf "%s" .Post }}
